--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -34,14 +34,15 @@
 </head>
 <body>
 <div class="login-form">
-    <form  >
+    <form (submit)="login()">
         <h2 class="text-center">USER LOGIN</h2>       
         <div class="form-group">
-            <input type="text" formControlName="username"  placeholder="Username" required="required">
+            <input type="text" formControlName="username" [(ngModel)] = "user.name" class="form-control"  placeholder="Username" required="required">
         </div>
         <div class="form-group">
-            <input type="password" formControlName="password"  class="form-control" placeholder="Password" required="required">
+            <input type="password" formControlName="password"  class="form-control" [(ngModel)]="user.password" placeholder="Password" required="required">
         </div>
+        <input type="hidden" formControlName="role"  class="form-control" [(ngModel)]="user" placeholder="role">
         <div class="form-group">
             <button type="submit" value="Login"  class="btn btn-primary btn-block">Log in</button>
         </div>
