--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,73 @@
-<div style="text-align:center">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<style type="text/css">
+
+
+h1 {
+    font: 600 1.5em/1 'Raleway', sans-serif;
+    color: rgba(0,0,0,.5);
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: .5em;
+    width: 100%;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+h2 {
+    font: 600 1.5em/1 'Raleway', sans-serif;
+    color: rgba(0,0,0,.5);
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: .5em;
+    width: 100%;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+.users{
+	top: 25%;
+	margin-top: 50px;
+}
+.top {
+
+}
+button {
+    background-color: #4CAF50; /* Green */
+    border-radius: 5px;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    transition-duration: 0.2s;
+}
+
+
+button:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
+a {
+	color: white;
+}
+
+
+</style>
+</head>
+<body>
+<br>
+<div class="top" style="text-align:center">
+  
   <h1>
-    Welcome to JAVA QUIZ !
+    Welcome to JAVA QUIZ!
   </h1>
-  <img width="300" alt="Angular Logo" src="./assets/java.png">
+
 </div>
-<div style="text-align: center">
+<div class ="users" style="text-align: center">
 <h2>GET STARTED </h2>
 <br/>
 <button><a routerLink="/login"> USER LOGIN</a></button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button><a routerLink="/adminlogin"> ADMIN LOGIN</a></button>
 </div>
+</body>
+</html>
